fix(): visual inconsistencies on iOS

--- a/src/components/forum-message/forum-message.scss
+++ b/src/components/forum-message/forum-message.scss
@@ -5,8 +5,8 @@ csr-forum-message {
 
     blockquote {
       border-left: 3px solid #ddd;
-      padding-left: 5px;
-      margin-left: 0;
+      padding-left: 10px;
+      margin: 10px 0 0;
     }
 
     img {
