--- a/src/pages/event-list/event-list.scss
+++ b/src/pages/event-list/event-list.scss
@@ -21,4 +21,8 @@ csr-event-list {
     }
   }
 
+  .item-divider-ios .label-ios {
+    font-size: 1.4rem;
+  }
+
 }
